# monitor

./: .env.example  .gitignore  CHANGELOG.md  DAEMON-MAC.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
data/: energy.db-shm  energy.db-wal
docs/: Architecture.md  PollEnergyMeter.md  PollRooms.md  PollWeather.md  UserGuide.md  setup-grafana.md
docs/issues/002/: implementation_plan.md  issue.md  task.md
docs/issues/003/: issue.md  task.md
docs/issues/012/: implementation_plan.md  issue.md  walkthrough.md
docs/issues/013/: implementation_plan.md  task.md  walkthrough.md
docs/issues/014/: implementation_plan.md  task.md  walkthrough.md
docs/issues/015/: implementation_plan.md  task.md  walkthrough.md
docs/issues/016/: task.md  walkthrough.md
docs/issues/017/: walkthrough.md
docs/issues/10/: implementation_plan.md  task.md  walkthrough.md
docs/issues/11/: implementation_plan.md  task.md  walkthrough.md
docs/issues/9/: implementation_plan.md  task.md  walkthrough.md
scripts/: combine_db.py  install-mac-daemon.sh  poll_energymeter.py  poll_evohome_standalone.py
src/dvm_mesura/: __init__.py  combine_csv.py  combine_db.py  daemon.py  energymeter.py  evohome.py  export_csv.py  main.py  openweathermap.py  setup.py  show.py
src/dvm_mesura/backends/: csv.py  sqlite.py
src/dvm_mesura/core/: base.py  controller.py  helpers.py  monitor.py
src/dvm_mesura/monitors/: energy.py  evohome.py  weather.py
src/monitor_suite/: energymeter.py  evohome.py  openweathermap.py
tests/: test_concurrency.py  test_core.py  test_energymeter.py  test_evohome.py  test_openweathermap.py
